Fix lightbox borders on mobile [WEB-64]

--- a/frontend/scss/globals/_g-modal.scss
+++ b/frontend/scss/globals/_g-modal.scss
@@ -113,6 +113,15 @@
 
 .g-modal--promo {
 
+  // Promo modals should always have borders
+  // Setting all to 3.2vw results in a 10px border @ 320px screens
+  @include breakpoint('xsmall') {
+    left: 3.2vw;
+    right: 3.2vw;
+    top: 3.2vw;
+    bottom: 3.2vw;
+  }
+
   .g-modal__content {
     display: flex;
     flex-flow: row nowrap;
